--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       inserisci indirizzo
     </button>
             <input id="idIndirizzo" type="text" placeholder="Inserire indirizzo">
+            <input id="indirizzoCitta" type="text" placeholder="Inserire città">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">chiudi</button>
