--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>`
-    <script src="./map.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
     
   </body>
 </html>
