--- a/index.html
+++ b/index.html
@@ -8,22 +8,18 @@
      crossorigin=""/>
      <style>
       #map { width: 600px; height: 600px; }
-     </style>    
-  </head>
-  <body>
+     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  </head>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <body>
     <div id="map"></div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      inserisci indirizzo
-    </button>
-            <input id="idIndirizzo" type="text" placeholder="Inserire indirizzo">
-            <input id="indirizzoCitta" type="text" placeholder="Inserire città">
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">chiudi</button>
-            <button id="prenotaButton" type="button" class="btn btn-primary">invia</button>
+    <input id="indirizzoCitta" type="text" placeholder="Inserire Città">
+    <input id="idIndirizzo" type="text" placeholder="Inserire Indirizzo">
+    <button id="popup" type="button" class="btn btn-primary">Inserisci Posizione</button>
+    <button id="prenotaButton" type="button" class="btn btn-primary">Invia Indirizzo</button>
           </div>
         </div>
       </div>
